# simple-rag

./: .gitignore  README.md  main.py  pyproject.toml
docs/: report.md
rag/: config.py  db.py  llm.py
rag/modules/: indexer.py  internet.py  router.py  search.py
